--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,6 @@
     <string name="Nacionalidad">Nacionalidad</string>
     <string name="Aficiones">Aficiones</string>
     <string name="Cancelar">Cancelar</string>
+    <string name = "H">H</string>
+    <string name = "M">M</string>
 </resources>
