--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,5 @@
     <string name="Futbol">Futbol</string>
     <string name="CV">CV Resumido</string>
     <string name="Registrar">Registrar</string>
+    <string name="Bienvenido">Bienvenido</string>
 </resources>
